modified:   index.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded"
                             href="#trabalhos">Trabalhos</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded"
-                            href="#curriculo">Currículo</a></li>
+                            href="http://lattes.cnpq.br/3600922455238720">Currículo</a></li>
                 </ul>
             </div>
         </div>
@@ -52,18 +52,18 @@
             <!-- Masthead Heading-->
             <h1 class="masthead-subheading mb-0"> Prof. Me. Leonardo Vieira Guimarães</h1>
             <!-- Icon Divider-->
-            <div class="divider-custom divider-light">
+            <!-- <div class="divider-custom divider-light">
                 <div class="divider-custom-line"></div>
                 <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                 <div class="divider-custom-line"></div>
-            </div>
+            </div> -->
             <!-- Masthead Subheading-->
             <p class="masthead-subheading font-weight-light mb-0">Engenheiro Computacional</p>
             <p class="masthead-subheading font-weight-light mb-0">Mestre em Modelagem Computacional e Sistemas</p>
         </div>
     </header>
     <!-- Portfolio Section-->
-    <section class="page-section portfolio" id="portfolio">
+    <section class="page-section portfolio" id="projeto">
         <div class="container">
             <!-- Portfolio Section Heading-->
             <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Portfolio</h2>
@@ -177,16 +177,16 @@
         </div>
     </section>
     <!-- Contact Section-->
-    <section class="page-section" id="contact">
+    <section class="page-section" id="contato">
         <div class="container">
             <!-- Contact Section Heading-->
-            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Me</h2>
+            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contato</h2>
             <!-- Icon Divider-->
-            <div class="divider-custom">
+            <!-- <div class="divider-custom">
                 <div class="divider-custom-line"></div>
                 <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                 <div class="divider-custom-line"></div>
-            </div>
+            </div> -->
             <!-- Contact Section Form-->
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-xl-7">
